@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.3
 
+  *) mod_autoindex: Correctly create an empty cell if the description
+     for a file is missing. PR 47682 [Peter Poeml <poeml suse.de>]
+
   *) ab: Fix broken error messages after resolver or connect() failures.
      [Jeff Trawick]
 
